--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -53,6 +53,8 @@
       href: functions-create-serverless-api.md
     - name: Een OpenAPI-definitie maken
       href: functions-openapi-definition.md
+    - name: Verbinding maken met een virtueel netwerk
+      href: functions-create-vnet.md
     - name: Het formaat van afbeeldingen wijzigen met Event Grid
       href: ../event-grid/resize-images-on-storage-blob-upload-event.md?toc=%2fazure%2fazure-functions%2ftoc.json
     - name: Een serverloze web-app maken
@@ -213,7 +215,7 @@
         - name: Verbinding maken met SQL Database
           href: functions-scenario-database-table-cleanup.md
         - name: Verbinding maken met een virtueel netwerk
-          href: functions-create-vnet.md
+          href: functions-create-vnet-old.md
         - name: Een Open API 2.0-definitie maken
           href: functions-api-definition-getting-started.md
         - name: Exporteren naar PowerApps en Microsoft Flow
@@ -297,6 +299,8 @@
       href: 'https://azure.microsoft.com/pricing/details/functions/'
     - name: Prijscalculator
       href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: Quotumgegevens
+      href: 'functions-scale.md#service-limits'
     - name: Regionale beschikbaarheid
       href: 'https://azure.microsoft.com/regions/services/'
     - name: Video's
