--- a/articles/active-directory/develop/TOC.yml
+++ b/articles/active-directory/develop/TOC.yml
@@ -239,20 +239,30 @@
               href: msal-net-provide-httpclient.md
             - name: Integreren met Azure AD B2C
               href: msal-b2c-overview.md
-            - name: Platform-specifieke overwegingen (.NET)
+            - name: Overwegingen en bekende problemen
               items:
-                - name: Webbrowsers
-                  href: msal-net-web-browsers.md
-                - name: Xamarin Android
-                  href: msal-net-xamarin-android-considerations.md
-                - name: Systeembrowser op Android
-                  href: msal-net-system-browser-android-considerations.md
-                - name: Xamarin iOS
-                  href: msal-net-xamarin-ios-considerations.md
-                - name: Universeel Windows-platform
-                  href: msal-net-uwp-considerations.md
-                - name: Een AAD B2C-beleid toepassen
-                  href: msal-net-aad-b2c-considerations.md
+                - name: MSAL.NET
+                  items:
+                    - name: Webbrowsers
+                      href: msal-net-web-browsers.md
+                    - name: Xamarin Android
+                      href: msal-net-xamarin-android-considerations.md
+                    - name: Systeembrowser op Android
+                      href: msal-net-system-browser-android-considerations.md
+                    - name: Xamarin iOS
+                      href: msal-net-xamarin-ios-considerations.md
+                    - name: Universeel Windows-platform
+                      href: msal-net-uwp-considerations.md
+                    - name: Een AAD B2C-beleid toepassen
+                      href: msal-net-aad-b2c-considerations.md
+                - name: MSAL.js
+                  items:
+                    - name: Overwegingen bij het gebruik van IE
+                      href: msal-js-use-ie-browser.md
+                    - name: Bekende problemen - IE en Microsoft Edge
+                      href: msal-js-known-issues-ie-edge-browsers.md
+                    - name: Bekende problemen - Safari
+                      href: msal-js-known-issues-safari-browser.md
         - name: Verificatie
           items:
             - name: Basisbeginselen van verificatie
