--- a/articles/databox-online/TOC.yml
+++ b/articles/databox-online/TOC.yml
@@ -89,6 +89,8 @@
           items:
             - name: Edge-rekenproces
               href: data-box-edge-manage-compute.md
+            - name: Edge-rekenprocesnetwerk
+              href: data-box-edge-extend-compute-access-modules.md
             - name: Shares
               href: data-box-edge-manage-shares.md
             - name: Gebruikers
