--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -216,6 +216,8 @@
           href: online-backup-and-restore.md
         - name: Naleving
           href: compliance.md
+    - name: Limieten
+      href: concepts-limits.md
 - name: 'Cassandra, MongoDB en andere API''s'
   expanded: true
   items:
