--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -305,6 +305,12 @@
                       href: app/snapshot-debugger-troubleshoot.md
                 - name: Diagnostiek
                   href: ../application-insights/app-insights-azure-diagnostics.md
+            - name: ASP.NET Core
+              displayname: 'Core, .NET Core, services.add, dotnetcore, c#, csharp'
+              href: app/asp-net-core.md
+              items:
+                - name: ILogger
+                  href: app/ilogger.md
             - name: ASP.NET-apps
               items:
                 - name: Web-apps
@@ -339,13 +345,6 @@
                   href: app/windows-services.md
                 - name: Windows-bureaublad
                   href: app/windows-desktop.md
-                - name: ASP.NET Core
-                  href: app/asp-net-core.md
-                  items:
-                    - name: Profiler voor Linux App Services (preview)
-                      href: app/profiler-aspnetcore-linux.md
-                - name: ASP.NET Core zonder Visual Studio
-                  href: app/asp-net-core-no-visualstudio.md
                 - name: Console
                   href: app/console.md
                 - name: Toepassingsdashboard
@@ -356,8 +355,6 @@
                   href: app/asp-net-exceptions.md
                 - name: Logboektraceringen
                   href: app/asp-net-trace-logs.md
-                - name: ILogger
-                  href: app/ilogger.md
                 - name: Prestatiemeteritems
                   href: app/performance-counters.md
                 - name: Afhankelijkheden
