--- a/articles/marketplace/TOC.yml
+++ b/articles/marketplace/TOC.yml
@@ -485,3 +485,5 @@
       href: ./partner-center-portal/publishing-status.md
     - name: Bestaande aanbiedingen bijwerken
       href: ./partner-center-portal/update-existing-offer.md
+    - name: Ondersteuningsopties
+      href: ./partner-center-portal/support.md
