--- a/articles/spatial-anchors/toc.yml
+++ b/articles/spatial-anchors/toc.yml
@@ -28,6 +28,8 @@
       href: tutorials/tutorial-share-anchors-across-devices.md
     - name: Delen in Unity met Azure Cosmos DB
       href: tutorials/tutorial-use-cosmos-db-to-store-anchors.md
+    - name: Een nieuwe HoloLens Unity-app starten
+      href: tutorials/tutorial-new-unity-hololens-app.md
     - name: Een nieuwe app voor Android starten
       href: tutorials/tutorial-new-android-app.md
 - name: Uitleg
