--- a/articles/app-service-mobile/TOC.yml
+++ b/articles/app-service-mobile/TOC.yml
@@ -157,8 +157,8 @@
               href: ../app-service/environment/app-service-environment-auto-scale.md?toc=%2fazure%2fapp-service-mobile%2ftoc.json
     - name: Beheren
       items:
-        - name: Configureren
-          href: ../app-service/web-sites-configure.md?toc=%2fazure%2fapp-service-mobile%2ftoc.json
+        - name: Algemene instellingen configureren
+          href: ../app-service/configure-common.md?toc=%2fazure%2fapp-service-mobile%2ftoc.json
         - name: Aangepaste domeinen
           items:
             - name: Aangepaste domeinen kopen en configureren
