--- a/articles/app-service/containers/toc.yml
+++ b/articles/app-service/containers/toc.yml
@@ -83,8 +83,8 @@
   items:
     - name: App configureren
       items:
-        - name: App-instellingen gebruiken
-          href: ../web-sites-configure.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
+        - name: Algemene instellingen configureren
+          href: ../configure-common.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
         - name: ASP.NET Core configureren
           href: configure-language-dotnetcore.md
         - name: Node.js configureren
