--- a/articles/azure-netapp-files/TOC.yml
+++ b/articles/azure-netapp-files/TOC.yml
@@ -53,6 +53,8 @@
       items:
         - name: REST
           href: azure-netapp-files-develop-with-rest-api.md
+        - name: SDK's voor Azure NetApp Files
+          href: azure-netapp-files-sdk-cli.md
         - name: Problemen met Azure NetApp Files-resourceproviders oplossen
           href: azure-netapp-files-troubleshoot-resource-provider-errors.md
 - name: Naslaginformatie
